--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^2.1.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.287.0",
@@ -27,6 +29,7 @@
     "node": "^20.7.0",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^14.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
