--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@stripe/stripe-js": "^2.1.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "eslint-plugin-react": "^7.34.1",
     "lucide-react": "^0.287.0",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
@@ -38,7 +39,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
     "prettier": "^3.0.3",
