--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off",
-    "react/jsx-key": [1, { "checkFragmentShorthand": true }]
-  }
+  // "rules": {
+  //   "react/no-unescaped-entities": "off",
+  //   "@next/next/no-page-custom-font": "off",
+  //   "react/jsx-key": [1, { "checkFragmentShorthand": true }]
+  // }
 }
