--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
